--- a/streams/client/package.json
+++ b/streams/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-scripts": "2.1.8"
   },
   "scripts": {
@@ -23,6 +24,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1"
   }
 }
