--- a/streams/client/package.json
+++ b/streams/client/package.json
@@ -6,7 +6,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "redux-form": "8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
