--- a/streams/client/package.json
+++ b/streams/client/package.json
@@ -26,6 +26,7 @@
   ],
   "devDependencies": {
     "axios": "^0.18.0",
+    "flv.js": "^1.5.0",
     "lodash": "^4.17.11",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
