--- a/contact-keeper/package.json
+++ b/contact-keeper/package.json
@@ -6,7 +6,10 @@
   "description": "Contact Manager App",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "yarn start --prefix client",
+    "clientinstall": "yarn add --prefix client",
+    "dev": "concurrently \"yarn run server\" \"yarn run client\""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
